[package]
name = "rust_study1"
version = "0.1.0"
edition = "2021"
description = "Second study project of Rust: a Library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
